--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -222,7 +222,7 @@
         </div>
         <div class="col-4">
           <div class="row" style="justify-content:space-evenly;">
-            <div class="col">
+            <div class="col" style="margin-left: -147px;">
              
             </div>
             <div class="col" style="margin-top: 24px;">
