onItemChange radio function added

--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -39,7 +39,7 @@
       </select>
 
     </div>
-    <div class="col-3 mt-4">
+    <div class="mt-4">
       <button class="btn btn-primary" type="submit">Reset Form </button>
     </div>
   </div>
