--- a/ClientApp/src/app/fpp-individual/fpp-individual.component.html
+++ b/ClientApp/src/app/fpp-individual/fpp-individual.component.html
@@ -2,7 +2,7 @@
 
   <form [formGroup]="fppiformgrp">
    
-      <div class="row" style="justify-content:space-evenly;">
+      <div class="row" style="justify-content:space-evenly;margin-right: 7%;">
         <div class="radio-button">
           <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
               formControlName="FCfppiEffectiveDate_Action" />
@@ -43,7 +43,7 @@
 
   
 
-      <div class="row" style="justify-content:space-evenly;">
+      <div class="row" style="justify-content:space-evenly;margin-right: 7%;">
 
         <div class="radio-button">
           <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
@@ -77,7 +77,7 @@
       
       </div>
 
-      <div class="row mt-2" style="justify-content:space-evenly;">
+      <div class="row mt-2" style="justify-content:space-evenly;margin-right: 7%;">
         <div class="radio-button">
           <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
               formControlName="FCfppiSpouseAmtMax_Action" />
