--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="width: 100%;">
   <form [formGroup]="accformgrp">
-    <div class="row pb-2 " style="justify-content:space-evenly;">
+    <div class="row pb-2 " style="justify-content:space-evenly;margin-right: 7%;">
       <div class="radio-button">
         <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
             formControlName="FCaccEffectiveDate_Action" />
