--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -2,7 +2,7 @@
 
   
    <form [formGroup]="fppgformgrp">
-      <div class="row" style="justify-content:space-evenly;">
+      <div class="row" style="justify-content:space-evenly;margin-right: 7%;">
         <div class="radio-button">
           <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
               formControlName="FCfppgEffectiveDate_Action" />
@@ -47,7 +47,7 @@
       </div>
    
 
-      <div class="row mt-4" style="justify-content:space-evenly;">
+      <div class="row mt-4" style="justify-content:space-evenly;margin-right: 7%;">
 
         <div class="radio-button">
           <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
@@ -81,7 +81,7 @@
       
       </div>
 
-      <div class="row mt-4" style="justify-content:space-evenly;">
+      <div class="row mt-4" style="justify-content:space-evenly;margin-right: 7%;">
         <div class="radio-button">
           <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
               formControlName="FCfppgSpouseAmtMax_Action" />
