--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <form [formGroup]="hospformgrp">
-  <div class="row" style="justify-content:space-evenly;">
+  <div class="row" style="justify-content:space-evenly;margin-right: 7%;">
     <div class="radio-button">
       <div><input id="gender" type="radio" (change)="onItemChange($event.target.value)" value="Always Override"
           formControlName="FChospEffectiveDate_Action" />
